# BRC_Based_On_RL

./: 0001-expose-frame-level-encode-to-HM-main.patch  0001-test.patch  CMakeLists.txt  LICENSE  README.md  rl_utils.py  test.py  utilitypb.cc
py-hm/swig/: enc.py  hevc.i  rm.md  setup.sh
